@@ -31,10 +31,10 @@ http://%HOSTIP:%HOSTPORT/we/want/that/page/6 -b "name=contents;name2=content2"
 </strip>
 <protocol>
 GET /we/want/that/page/6 HTTP/1.1
-Cookie: name=contents;name2=content2
 Host: 127.0.0.1:8999
 Pragma: no-cache
 Accept: */*
+Cookie: name=contents;name2=content2
 
 </protocol>
 </verify>
