@@ -6,6 +6,10 @@
 
                                   Changelog
 
+Daniel (24 May 2004)
+- Robert D. Young reported that CURLOPT_COOKIEFILE and CURLOPT_COOKIE could
+  not be used both in one request. Fixed it and added test case 172 to verify.
+
 Daniel (21 May 2004)
 - While talking to host a.b.c, libcurl did wrongly not accept cookies that
   were set to the domain .a.b.c (that is with a dot prefix). This is now fixed
